--- a/app/src/main/res/layout/home_two.xml
+++ b/app/src/main/res/layout/home_two.xml
@@ -6,15 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
 
-<LinearLayout
+
+<RelativeLayout
+    android:id="@+id/mainview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar_home"/>
@@ -23,6 +22,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar"
+        android:layout_above="@+id/navigation"
         android:orientation="vertical"
         xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -37,7 +38,6 @@
                 android:id="@+id/list_items"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingBottom="56dp"
                 android:scrollbars="vertical"/>
 
             <ProgressBar
@@ -57,22 +57,22 @@
     </LinearLayout>
 
 
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/whiteshadow"
+        app:itemIconTint="@color/colorPrimary"
+        app:itemTextColor="@color/colorPrimary"
+        app:menu="@menu/bottom_navigation"/>
+
+
+</RelativeLayout>
 
 
 
-</LinearLayout>
 
-        <android.support.design.widget.BottomNavigationView
-            android:id="@+id/navigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:background="@color/whiteshadow"
-            app:itemIconTint="@color/colorPrimary"
-            app:itemTextColor="@color/colorPrimary"
-            app:menu="@menu/bottom_navigation"/>
-
-    </RelativeLayout>
 
 <FrameLayout
     android:layout_width="250dp"
