--- a/app/src/main/res/layout/home_two.xml
+++ b/app/src/main/res/layout/home_two.xml
@@ -34,7 +34,7 @@
             android:gravity="center_vertical|center_horizontal">
 
 
-            <com.mindorks.placeholderview.ExpandablePlaceHolderView
+            <com.mindorks.placeholderview.PlaceHolderView
                 android:id="@+id/list_items"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
