--- a/app/src/main/res/layout/home_two_product_item.xml
+++ b/app/src/main/res/layout/home_two_product_item.xml
@@ -1,44 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="180dp"
-    android:layout_height="200dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
-    android:background="@drawable/shadow"
+<android.support.v7.widget.CardView
     android:id="@+id/toggleView"
-    android:gravity="center|left"
-    android:layout_marginTop="8dp"
-    android:paddingLeft="10dp"
-    android:paddingRight="8dp">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="150dp"
+    android:layout_height="200dp"
+    android:layout_margin="10dp"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="10dp">
+
+    <LinearLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/shadow"
+        android:gravity="center|left"
+        android:orientation="vertical"
+        android:padding="8dp">
 
 
-    <com.mikhaellopez.circularimageview.CircularImageView
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:src="@mipmap/ic_launcher"
-        android:id="@+id/itemIcon"
-        app:civ_border_color="#FFFFFF"
-        app:civ_border_width="4dp"
-        app:civ_shadow="false"/>
+        <ImageView
+            android:id="@+id/itemIcon"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:scaleType="centerCrop" />
 
 
-<TextView
-    android:id="@+id/headingTxt"
-    android:layout_width="wrap_content"
-    android:layout_height="60dp"
-    android:textColor="@color/blackshadow"
-    android:text="Menu Item"
-    android:gravity="center"
-    android:layout_marginLeft="7dp"
-    android:layout_toRightOf="@id/itemIcon"
-    android:textSize="13sp" />
-<ImageView
-    android:layout_width="wrap_content"
-    android:layout_height="60dp"
-    android:layout_alignParentRight="true"
-    android:tint="@color/blackshadow"
-    android:padding="0dp"
-    android:id="@+id/toggleIcon"
-    android:gravity="center|right"
-    android:src="@drawable/right"/>
-</RelativeLayout>
+        <TextView
+            android:id="@+id/headingTxt"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:layout_gravity="center_horizontal"
+            android:textSize="20dp"
+            android:textAlignment="center"
+            android:text="Menu Item"
+            android:textColor="@color/blackshadow" />
+        <!--<ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_alignParentRight="true"
+            android:tint="@color/blackshadow"
+            android:padding="0dp"
+            android:id="@+id/toggleIcon"
+            android:gravity="center|right"
+            android:src="@drawable/right"/>-->
+    </LinearLayout>
+</android.support.v7.widget.CardView>
