--- a/app/src/main/res/layout/home_2_category.xml
+++ b/app/src/main/res/layout/home_2_category.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:background="@color/colorAccent">
 
     <RelativeLayout
         android:id="@+id/mainview"
@@ -17,44 +17,37 @@
             layout="@layout/toolbar_home" />
 
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/navigation"
             android:layout_below="@+id/toolbar"
             android:orientation="vertical">
 
-            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical|center_horizontal"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/toolbar"
+                android:background="?attr/colorPrimary"
+                android:elevation="0dp"
+                android:minHeight="?attr/actionBarSize"
+                app:elevation="0dp"
+                app:tabBackground="@drawable/tab_background_color"
+                app:tabIndicatorHeight="0dp"
+                app:tabSelectedTextColor="@color/white"
+                app:tabTextColor="@color/tabbackground" />
 
-                <!--  <com.mindorks.placeholderview.PlaceHolderView
-                      android:id="@+id/slider_items"
-                      android:layout_width="match_parent"
-                      android:layout_height="match_parent"
-                      android:scrollbars="vertical"/>-->
-
-                <com.mindorks.placeholderview.PlaceHolderView
-                    android:id="@+id/list_items"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scrollbars="vertical" />
-
-                <ProgressBar
-                    android:id="@+id/loading"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:indeterminate="true" />
-
-
-            </FrameLayout>
+            <android.support.v4.view.ViewPager
+                android:id="@+id/pager"
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                android:layout_below="@id/tab_layout"
+              />
 
 
         </LinearLayout>
-
 
         <android.support.design.widget.BottomNavigationView
             android:id="@+id/navigation"
@@ -68,7 +61,6 @@
 
 
     </RelativeLayout>
-
 
     <FrameLayout
         android:layout_width="250dp"
@@ -86,4 +78,5 @@
 
 
 </android.support.v4.widget.DrawerLayout>
+
 
