--- a/app/src/main/res/layout/home_one.xml
+++ b/app/src/main/res/layout/home_one.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/drawerLayout"
+    android:id="@+id/drawerLayoutHomeOne"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
     <RelativeLayout
-        android:id="@+id/mainview"
+        android:id="@+id/mainviewHomeOne"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <include
-            android:id="@+id/toolbar"
+            android:id="@+id/toolbarHomeOne"
             layout="@layout/toolbar_home" />
 
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/navigation"
-            android:layout_below="@+id/toolbar"
+            android:layout_above="@+id/navigationHomeOne"
+            android:layout_below="@+id/toolbarHomeOne"
             android:orientation="vertical">
 
             <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -37,13 +37,13 @@
                       android:scrollbars="vertical"/>-->
 
                 <com.mindorks.placeholderview.PlaceHolderView
-                    android:id="@+id/list_items"
+                    android:id="@+id/list_items_home_one"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scrollbars="vertical" />
 
                 <ProgressBar
-                    android:id="@+id/loading"
+                    android:id="@+id/loadingHomeOne"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -57,7 +57,7 @@
 
 
         <android.support.design.widget.BottomNavigationView
-            android:id="@+id/navigation"
+            android:id="@+id/navigationHomeOne"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -78,7 +78,7 @@
         android:paddingBottom="10dp">
 
         <com.mindorks.placeholderview.PlaceHolderView
-            android:id="@+id/drawerView"
+            android:id="@+id/drawerViewHomeOne"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="vertical" />
