--- a/app/src/main/res/layout/image_gallary_home_1.xml
+++ b/app/src/main/res/layout/image_gallary_home_1.xml
@@ -10,13 +10,13 @@
         android:layout_height="wrap_content">
 
         <android.support.v4.view.ViewPager
-            android:id="@+id/pager"
+            android:id="@+id/pager_home_1"
             android:layout_width="fill_parent"
             android:layout_height="200dp"
             android:layout_alignParentTop="true" />
 
         <me.relex.circleindicator.CircleIndicator
-            android:id="@+id/indicator"
+            android:id="@+id/indicator_home_1"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_alignParentBottom="true" />
