--- a/app/src/main/res/layout/slide_home_2.xml
+++ b/app/src/main/res/layout/slide_home_2.xml
@@ -2,12 +2,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
+
     <ImageView
         android:id="@+id/image"
         android:layout_width="fill_parent"
         android:layout_height="200dp"
-        android:adjustViewBounds="true"
         android:layout_gravity="top"
-        android:src="@drawable/deep"
-        android:scaleType="centerCrop"/>
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/deep" />
 </FrameLayout>
